--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         width: 100%;
         height: 100px;
         object-fit: cover;
+        border-radius: 10%;
       }
 
       #tablero {
@@ -199,7 +200,7 @@
         <div id="btns">
           <div id="btns_juego">
             <button id="btn_quitar" class="btn">
-              Quitar palos seleccionados
+              Elegí y sacá esos palos de una vez!
             </button>
           </div>
 
